--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,9 @@
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 header h1 {
     font-weight: bold;
@@ -17,14 +20,12 @@ header h1 {
     color: #fce138;
     margin: 0;
     padding: 0;
-    display: inline;
 }
 header a {
     color: #fce138;
     text-decoration: none;
 }
 header nav {
-    float: right;
     margin: 7px 0;
 }
 header nav ul li {
