--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,44 +40,37 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw
 }
-footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-}
-footer h2 {
-    display: inline;
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
-}
-footer div {
-    float: right;
-    line-height: 1.5;
-    text-align: right;
-}
-footer a {
-    color: #024e76;
-}
 section {
     padding: 60px;
 }
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 .hero-form {
     border: 3px solid #024e76;
     padding: 20px;
-    width: 500px;
     color: #024e76;
     background-color: #fce138;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40%;
+    margin: 3.5%;
 }
 .hero-form h3 {
     font-size: 24px;
@@ -206,12 +199,12 @@ section {
     height: 400px;
 }
 .contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
-  color: white;
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
 }
 .contact-info h3 {
     color: #fce138;
@@ -225,4 +218,24 @@ section {
 }
 .contact-info a {
     color: #fce138;
+}
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+footer h2 {
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+footer div {
+    line-height: 1.5;
+    text-align: right;
+}
+footer a {
+    color: #024e76;
 }
