--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,10 +98,7 @@ section {
     padding: 10px 20px;
     font-size: 16px;    
 }
-.intro {
-    text-align: center;
-    
-}
+
 .intro p {
     display: inline-block;
     line-height: 1.7;
@@ -114,10 +111,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: #39a6b2 3px solid;
-    display: inline-block; 
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #39a6b2;
@@ -126,32 +124,49 @@ section {
     border-color: #fce138;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
-.steps div {
-    margin-bottom: 80px;
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-.steps h3 {
-    color: #024e76;
+.step h3 {
+color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
 }
-.steps p {
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+.step-img img {
+    max-width: 100%;
+}
+.step-text {
+    flex: 12;
+}
+.step h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+}
+.step-text p {
     color:#39a6b2;
-    font-size: 23px;
-}
-.steps span{
-    font-size: 38px;
+    font-size: 18px;
 }
 
-.trainers {
-    text-align: center;
-}
 .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
@@ -188,7 +203,6 @@ section {
     line-height: 1.3;
 }
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -238,4 +252,7 @@ footer div {
 }
 footer a {
     color: #024e76;
+}
+.flex-row {
+    display: flex;
 }
