--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ header a {
 header nav {
     margin: 7px 0;
 }
-.header nav ul {
+header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
