--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,6 @@ color: #024e76;
     text-align: left;
     margin: 30px 0 0 60px;
     color: white;
-    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
@@ -233,8 +232,26 @@ color: #024e76;
 .contact-info p, .contact-info address {
     margin:20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
+}
+.contact-form input, .contact-form textarea{
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    color: #024e76;
+    margin-bottom: 15px;
+    margin-top: 5px;
+
+}
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
 }
 .contact-info a {
     color: #fce138;
