--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,12 @@
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
   }
+
+  :root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  }
   
   
   /* HEADER / NAV BAR STYLES START */
@@ -26,6 +32,7 @@
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
   }
   
   header h1 {
@@ -137,7 +144,58 @@
     margin: 3.5%;
     border-radius: 15px;
   }
+  .checkbox-wrapper input, .radio-wrapper input {
+    position: relative;
+    margin: 10px;
+    line-height: 1.6;
+  }
   
+  .checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background-color: rgb(255, 255, 255, 0.75);
+    border: 1px solid #024e76;
+    position: absolute;
+    top: -4px;
+    left: -30px;
+    border-radius: 50%;
+  }
+
+  .radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #024e76;
+    position: absolute;
+    left: -29px;
+    top: -3px;
+    background-image: radial-gradient(circle,#39a6b2, #024e76);
+  }
+  
+  .checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid #024e76;
+    border-bottom: 2px solid #024e76;
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg) ;
+  }
+
+  .checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+
   .hero-form h3 {
     font-size: 24px;
     margin: 0;
